gem active_link_to
through the gem has not been updated in years, it works and is stable.

it is better and more predictable than my custom helper

https://github.com/comfy/active_link_to

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -13,6 +13,6 @@
       <% end %>
     </div>
 
-    <%= inline_svg_tag "svg/chevron-right.svg" %>
+    <%= inline_svg_tag "svg/chevron-right.svg", class: "size-5" %>
   </div>
 <% end %>
