--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,11 @@
 <nav class="flex justify-between p-4 border-b bg-white">
   <div class="flex items-center gap-2">
-    <%= active_link_to "Home", root_path, active_classes: "bg-gray-100", class: "nav-link" %>
+    <%= active_link_to "Home", root_path, active: :exclusive, class_active: "bg-gray-100", class: "nav-link" %>
 
     <% if signed_in? %>
-      <%= active_link_to "Accounts", accounts_path, active_classes: "bg-gray-100", class: "nav-link" %>
+      <%= active_link_to "Accounts", accounts_path, active: :exclusive, class_active: "bg-gray-100", class: "nav-link" %>
       <% if @account.present? && @account.persisted? %>
-        <%= active_link_to account_path(@account), class: "inline-flex items-center gap-2 no-underline" do %>
+        <%= link_to account_path(@account), class: "inline-flex items-center gap-2 no-underline" do %>
           <div>
             <%= account_avatar(@account) %>
           </div>
@@ -20,13 +20,13 @@
   <%# auth %>
   <div class="">
     <% if signed_in? %>
-      <%= active_link_to current_user.email, edit_user_registration_path, active_classes: "bg-gray-100", class: "nav-link" %>
+      <%= active_link_to current_user.email, edit_user_registration_path, class_active: "bg-gray-100", class: "nav-link" %>
       <div class="inline-flex">
         <%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "nav-link" %>
       </div>
     <% else %>
-      <%= active_link_to "Log in", new_user_session_path, class: "nav-link" %>
-      <%= active_link_to "Register", new_user_registration_path, class: "nav-link" %>
+      <%= active_link_to "Log in", new_user_session_path, class_active: "bg-gray-100", class: "nav-link" %>
+      <%= active_link_to "Register", new_user_registration_path, class_active: "bg-gray-100", class: "nav-link" %>
     <% end %>
   </div>
 </nav>
