--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -6,11 +6,11 @@
       <%= image_tag 'logo.png', alt: 'logo', class: 'h-10 w-auto' %>
     <% end %>
 
-    <%= active_link_to "Home", root_path, active_classes: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300" %>
-    <%= active_link_to "Accounts", accounts_path, active_classes: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300" %>
+    <%= active_link_to "Home", root_path, active: :exclusive, class_active: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300" %>
+    <%= active_link_to "Accounts", accounts_path, active: :exclusive, class_active: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300" %>
 
       <% current_user.accounts.each do |account| %>
-        <%= active_link_to account_path(account), class: "pl-8 pr-4 py-2 inline-flex items-center gap-2 no-underline hover:bg-slate-300", active_classes: "bg-slate-200", active_if: current_account && @account == account do %>
+        <%= active_link_to account_path(account), class: "pl-8 pr-4 py-2 inline-flex items-center gap-2 no-underline hover:bg-slate-300", class_active: "bg-slate-200" do %>
           <div>
             <%= account_avatar(account) %>
           </div>
@@ -21,8 +21,8 @@
       <% end %>
 
     <% if current_account %>
-      <%= active_link_to "Users", account_account_users_path(@account), active_classes: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300" %>
-      <%= active_link_to "Inboxes", account_inboxes_path(@account), active_classes: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300" %>
+      <%= active_link_to "Users", account_account_users_path(@account), class_active: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300" %>
+      <%= active_link_to "Inboxes", account_inboxes_path(@account), class_active: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300" %>
     <% end %>
   </nav>
 
