simplify - remove settings folder

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,6 @@
 
   <div>
     &copy; <%= Time.now.year %>
-    <%= Rails.application.config_for(:settings).dig(:app_name) %>.
-    All rights reserved.
+    Myapp. All rights reserved.
   </div>
 </footer>
