--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,4 +1,4 @@
-<title><%= content_for(:title) || "Askvote" %></title>
+<title><%= content_for(:title) || "Myapp" %></title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <%= csrf_meta_tags %>
