--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -7,8 +7,8 @@
   <div class="flex items-center gap-4">
     <div class="flex items-center -space-x-2">
       <% account.users.each do |user| %>
-        <div class="bg-slate-400 rounded-full size-8 justify-center flex items-center border" title="<%= user.email %>">
-          <%= user.email.first %>
+        <div class="bg-slate-400 rounded-full size-8 justify-center flex items-center border text-sm" title="<%= user.email %>">
+          <%= user.email[0..1] %>
         </div>
       <% end %>
     </div>
