--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -3,7 +3,7 @@
   <nav class="flex flex-col">
     <%= link_to root_path, class: "p-4" do %>
       <%#= image_tag 'logolong.png', alt: 'logo', class: 'h-10 w-auto' %>
-      <%= image_tag 'logo.png', alt: 'logo', class: 'h-10 w-auto' %>
+      <%= image_tag "logo.png", alt: "logo", class: "h-10 w-auto" %>
     <% end %>
 
     <%= active_link_to "Home", root_path, active: :exclusive, class_active: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300" %>
