--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   </head>
 
   <body class="flex h-screen">
-    <%= render 'shared/sidebar' if signed_in? %>
+    <%= render "shared/sidebar" if signed_in? %>
 
     <div class="flex-grow overflow-y-auto flex flex-col">
       <header class="sticky z-30 top-0">
