--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -2,7 +2,7 @@
   <%# Widescreen sidebar top %>
   <%# change the nav flex-col/flex-row %>
   <nav class="flex flex-row">
-    <div class="flex flex-col">
+    <div class="flex flex-col max-h-screen overflow-y-auto">
       <%= link_to root_path, class: "flex items-center justify-center px-2" do %>
         <%#= image_tag "logolong.png", alt: "logo", class: "max-h-10 max-w-10" %>
         <%= image_tag "logo.png", alt: "logo", class: "max-h-10 max-w-10" %>
@@ -17,21 +17,21 @@
       <% end %>
     </div>
 
-    <div class="flex flex-col">
-    <% if current_account %>
-      <%= active_link_to account_account_users_path(@account), class_active: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300 flex items-center space-x-2" do %>
-        <%= inline_svg_tag "svg/user-group.svg", class: "size-5" %>
-        <span>
-          Users
-        </span>
+    <div class="flex flex-col max-h-screen overflow-y-auto">
+      <% if current_account %>
+        <%= active_link_to account_account_users_path(@account), class_active: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300 flex items-center space-x-2" do %>
+          <%= inline_svg_tag "svg/user-group.svg", class: "size-5" %>
+          <span>
+            Users
+          </span>
+        <% end %>
+        <%= active_link_to account_inboxes_path(@account), class_active: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300 flex items-center space-x-2" do %>
+          <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
+          <span>
+            Inboxes
+          </span>
+        <% end %>
       <% end %>
-      <%= active_link_to account_inboxes_path(@account), class_active: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300 flex items-center space-x-2" do %>
-        <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
-        <span>
-          Inboxes
-        </span>
-      <% end %>
-    <% end %>
     </div>
   </nav>
 
