--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -1,7 +1,7 @@
 <aside class="hidden lg:flex flex-col justify-between bg-slate-400">
   <%# Widescreen sidebar top %>
   <%# change the nav flex-col/flex-row %>
-  <nav class="flex flex-row">
+  <nav class="flex flex-row flex-grow divide-x">
     <div class="flex flex-col max-h-screen overflow-y-auto">
       <%= link_to root_path, class: "flex items-center justify-center px-2" do %>
         <%#= image_tag "logolong.png", alt: "logo", class: "max-h-10 max-w-10" %>
@@ -11,21 +11,21 @@
       <%#= active_link_to "Accounts", accounts_path, active: :exclusive, class_active: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300" %>
 
       <% current_user.accounts.each do |account| %>
-        <%= active_link_to account_path(account), class: "px-4 py-2 inline-flex items-center justify-center no-underline hover:bg-slate-300", class_active: "bg-slate-300" do %>
+        <%= active_link_to account_path(account), class_active: "bg-slate-300", class: "px-4 py-2 hover:bg-slate-300 flex items-center space-x-2 text-sm" do %>
           <%= account_avatar(account) %>
         <% end %>
       <% end %>
     </div>
 
-    <div class="flex flex-col max-h-screen overflow-y-auto">
+    <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-2">
       <% if current_account %>
-        <%= active_link_to account_account_users_path(@account), class_active: "bg-slate-300", class: "px-4 py-2 hover:bg-slate-300 flex items-center space-x-2" do %>
+        <%= active_link_to account_account_users_path(@account), class_active: "bg-slate-300", class: "px-4 py-2 hover:bg-slate-300 flex items-center space-x-2 text-sm rounded" do %>
           <%= inline_svg_tag "svg/user-group.svg", class: "size-5" %>
           <span>
             Users
           </span>
         <% end %>
-        <%= active_link_to account_inboxes_path(@account), class_active: "bg-slate-300", class: "px-4 py-2 hover:bg-slate-300 flex items-center space-x-2" do %>
+        <%= active_link_to account_inboxes_path(@account), class_active: "bg-slate-300", class: "px-4 py-2 hover:bg-slate-300 flex items-center space-x-2 text-sm rounded" do %>
           <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
           <span>
             Inboxes
@@ -37,5 +37,6 @@
 
   <%# Widescreen sidebar bottom %>
   <div class="p-4">
+    Bottom content
   </div>
 </aside>
