--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -1,7 +1,7 @@
-<aside class="hidden lg:flex flex-col justify-between bg-slate-400 max-h-screen overflow-y-auto">
+<aside class="hidden lg:flex flex-col justify-between bg-slate-300 max-h-screen overflow-y-auto">
   <%# Widescreen sidebar top %>
   <%# change the nav flex-col/flex-row %>
-  <nav class="flex flex-row flex-grow divide-x bg-rose-400">
+  <nav class="flex flex-row flex-grow">
     <div class="flex flex-col max-h-screen overflow-y-auto pb-2">
       <%= link_to root_path, class: "flex items-center justify-center px-2" do %>
         <%#= image_tag "logolong.png", alt: "logo", class: "max-h-10 max-w-10" %>
@@ -12,7 +12,7 @@
 
       <div class="flex flex-col items-center space-y-2">
         <% current_user.accounts.each do |account| %>
-          <%= active_link_to account_path(account), class_active: "border-slate-300 bg-slate-300 rounded-md", class: "flex items-center space-x-2 text-sm rounded border-2 border-transparent hover:bg-slate-300" do %>
+          <%= active_link_to account_path(account), class_active: "border-slate-400", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-slate-400 bg-gray-600" do %>
             <%= account_avatar(account) %>
           <% end %>
         <% end %>
@@ -20,7 +20,7 @@
     </div>
 
     <% if current_account %>
-      <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-2">
+      <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-2 bg-slate-200">
         <%= active_link_to account_account_users_path(@account), class_active: "bg-slate-300", class: "px-3 py-2 hover:bg-slate-300 flex items-center space-x-2 text-sm rounded" do %>
           <%= inline_svg_tag "svg/user-group.svg", class: "size-5" %>
           <span>
