--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -12,7 +12,7 @@
 
       <div class="flex flex-col items-center space-y-2">
         <% current_user.accounts.each do |account| %>
-          <%= active_link_to account_path(account), class_active: "border-slate-400", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-slate-400 bg-gray-600" do %>
+          <%= active_link_to account_path(account), class_active: "bg-slate-400", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-slate-400 bg-gray-600" do %>
             <%= account_avatar(account) %>
           <% end %>
         <% end %>
