--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -1,4 +1,4 @@
-<aside class="hidden lg:flex flex-col justify-between bg-slate-300 max-h-screen overflow-y-auto">
+<aside id="element-id" class="hidden lg:flex flex-col justify-between bg-slate-300 max-h-screen overflow-y-auto">
   <%# Widescreen sidebar top %>
   <%# change the nav flex-col/flex-row %>
   <nav class="flex flex-row flex-grow">
