--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -13,7 +13,7 @@
 */
 
 .btn {
-  @apply inline-block px-4 py-2 rounded-md space-x-1 font-semibold text-sm transition-colors ease-in-out duration-300 cursor-pointer;
+  @apply inline-flex px-4 py-2 rounded-md space-x-2 font-semibold text-sm transition-colors ease-in-out duration-300 cursor-pointer;
 }
 
 .btn-primary {
@@ -24,14 +24,18 @@
   @apply bg-gray-300 text-gray-800 focus:bg-gray-400 hover:bg-gray-400;
 }
 
+.btn-transparent {
+  @apply text-gray-500 focus:text-gray-700 hover:text-gray-700 hover:bg-gray-300;
+}
+
 .btn-danger {
   @apply bg-red-500 text-white focus:bg-red-600 hover:bg-red-600;
 }
 
-.form-input {
-  @apply block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full;
+.btn-sm {
+  @apply px-3 py-1 text-xs;
 }
 
-.nav-link {
-  @apply text-gray-500 hover:text-gray-900 font-semibold text-sm hover:bg-gray-100 px-2 py-1 rounded-md;
+.form-input {
+  @apply block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full;
 }
