--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="p-4 text-center border-t space-y-2">
   <div>
-    <%= active_link_to "Pricing", pricing_path, class_active: "bg-gray-100", class: "nav-link" %>
-    <%= active_link_to "Terms", terms_path, class_active: "bg-gray-100", class: "nav-link" %>
-    <%= active_link_to "Privacy", privacy_path, class_active: "bg-gray-100", class: "nav-link" %>
+    <%= active_link_to "Pricing", pricing_path, class_active: "bg-gray-300", class: "btn btn-transparent" %>
+    <%= active_link_to "Terms", terms_path, class_active: "bg-gray-300", class: "btn btn-transparent" %>
+    <%= active_link_to "Privacy", privacy_path, class_active: "bg-gray-300", class: "btn btn-transparent" %>
   </div>
 
   <div>
