PageComponent - more semantic, add basic test

--- a/app/components/page_component.html.erb
+++ b/app/components/page_component.html.erb
@@ -1,4 +1,4 @@
-<div class="space-y-8 mx-auto <%= width_class %>">
+<section class="space-y-8 mx-auto <%= width_class %>">
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">
       <%= title %>
@@ -11,4 +11,4 @@
   <div class="<%= content_container_class %>">
     <%= content %>
   </div>
-</div>
+</section>
