--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<aside class="hidden lg:flex flex-col justify-between bg-slate-400 w-72">
+<aside class="hidden lg:flex flex-col justify-between bg-slate-400 w-52">
   <%# Widescreen sidebar top %>
   <nav class="flex flex-col">
     <%= link_to root_path, class: "p-4" do %>
@@ -9,7 +9,7 @@
     <details class="">
       <summary class="hover:bg-slate-300 py-2">
         <% if current_account %>
-        <div class="inline-flex items-center gap-2">
+        <div class="inline-flex items-center gap-2 max-w-40">
           <div>
             <%= account_avatar(current_account) %>
           </div>
