--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -2,8 +2,8 @@
   <%# Widescreen sidebar top %>
   <%# change the nav flex-col/flex-row %>
   <nav class="flex flex-row flex-grow">
-    <div class="flex flex-col max-h-screen overflow-y-auto pb-2">
-      <%= link_to root_path, class: "flex items-center justify-center px-2" do %>
+    <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-4">
+      <%= link_to root_path, class: "flex items-center justify-center" do %>
         <%#= image_tag "logolong.png", alt: "logo", class: "max-h-10 max-w-10" %>
         <%= image_tag "logo.png", alt: "logo", class: "max-h-10 max-w-10" %>
       <% end %>
