sidebar - abstract nav links

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -37,25 +37,7 @@
 
     <% if current_account %>
       <div class="space-y-2 p-2">
-        <%= active_link_to account_path(current_account), active: :exclusive, class_active: "bg-gray-300", class: "w-full btn btn-transparent" do %>
-          <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
-          <span>
-            Dashboard
-          </span>
-        <% end %>
-        <%= active_link_to account_account_users_path(@account), class_active: "bg-gray-300", class: "w-full btn btn-transparent" do %>
-          <%= inline_svg_tag "svg/user-group.svg", class: "size-5" %>
-          <span>
-            Users
-          </span>
-        <% end %>
-        <%= active_link_to account_inboxes_path(@account), class_active: "bg-gray-300", class: "w-full btn btn-transparent" do %>
-          <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
-          <span>
-            Inboxes
-          </span>
-        <% end %>
-<%# add new resources here %>
+        <%= render 'shared/nav_links' %>
       </div>
     <% end %>
   </nav>
