--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -37,7 +37,7 @@
 
     <% if current_account %>
       <div class="space-y-2 p-2">
-        <%= render 'shared/nav_links' %>
+        <%= render "shared/nav_links" %>
       </div>
     <% end %>
   </nav>
