--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -20,7 +20,7 @@
 
     <% if current_account %>
       <div class="flex flex-col max-h-screen overflow-y-auto p-2 space-y-2 bg-slate-200">
-        <%= render 'shared/nav_links' %>
+        <%= render "shared/nav_links" %>
       </div>
     <% end %>
   </nav>
