--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<aside class="hidden lg:flex flex-col justify-between bg-slate-400 w-52">
+<aside class="hidden lg:flex flex-col justify-between bg-slate-200 w-52">
   <%# Widescreen sidebar top %>
   <nav class="flex flex-col">
     <%= link_to root_path, class: "p-4" do %>
@@ -6,7 +6,7 @@
     <% end %>
 
     <details class="">
-      <summary class="hover:bg-slate-300 py-2 cursor-pointer">
+      <summary class="hover:bg-gray-300 py-2 cursor-pointer">
         <% if current_organization %>
         <div class="inline-flex items-center gap-2 max-w-40">
           <div>
@@ -20,7 +20,7 @@
           Select Organization
         <% end %>
       </summary>
-      <div class="space-y-2 p-2 border-b">
+      <div class="space-y-2 p-2 border-b-2 border-slate-300">
         <%= active_link_to "All Organizations", organizations_path, active: :exclusive, class_active: "bg-gray-300", class: "w-full btn btn-transparent" %>
         <% current_user.organizations.excluding(current_organization).each do |organization| %>
           <%= active_link_to organization_path(organization), class_active: "bg-gray-300", class: "w-full btn btn-transparent flex items-center" do %>
