--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -11,7 +11,7 @@
 
       <div class="flex flex-col items-center space-y-2">
         <% current_user.organizations.each do |organization| %>
-          <%= active_link_to organization_path(organization), class_active: "bg-slate-400", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-slate-400 bg-gray-600" do %>
+          <%= active_link_to organization_path(organization), class_active: "bg-slate-400", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-slate-400 hover:bg-gray-600" do %>
             <%= organization_avatar(organization) %>
           <% end %>
         <% end %>
