forms - autofocus fields

--- a/app/views/organizations/memberships/new.html.erb
+++ b/app/views/organizations/memberships/new.html.erb
@@ -4,7 +4,7 @@
 
     <div class="">
       <%= form.label :email %>
-      <%= form.email_field :email, placeholder: "hello@superails.com", class: "form-input" %>
+      <%= form.email_field :email, placeholder: "hello@superails.com", class: "form-input", autofocus: true %>
     </div>
 
     <div class="">
