--- a/app/views/shared/_nav_links.html.erb
+++ b/app/views/shared/_nav_links.html.erb
@@ -10,9 +10,11 @@
     Users
   </span>
 <% end %>
-<%= active_link_to organization_inboxes_path(@organization), class_active: "bg-gray-300", class: "w-full btn btn-transparent" do %>
-  <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
-  <span>
-    Inboxes
-  </span>
+<% if policy(Inbox.new(organization: @organization)).index? %>
+  <%= active_link_to organization_inboxes_path(@organization), class_active: "bg-gray-300", class: "w-full btn btn-transparent" do %>
+    <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
+    <span>
+      Inboxes
+    </span>
+  <% end %>
 <% end %>
