--- a/app/views/shared/_nav_links.html.erb
+++ b/app/views/shared/_nav_links.html.erb
@@ -1,18 +1,24 @@
-<%= active_link_to organization_path(current_organization), active: :exclusive, class_active: "bg-gray-300", class: "w-full btn btn-transparent" do %>
-  <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
-  <span>
+<%= active_link_to organization_path(current_organization), active: :exclusive, class_active: "bg-gray-300", class: "w-full items-center btn btn-transparent" do %>
+  <div>
+    <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
+  </div>
+  <div>
     Dashboard
-  </span>
+  </div>
 <% end %>
-<%= active_link_to organization_memberships_path(@organization), class_active: "bg-gray-300", class: "w-full btn btn-transparent" do %>
-  <%= inline_svg_tag "svg/user-group.svg", class: "size-5" %>
-  <span>
+<%= active_link_to organization_memberships_path(@organization), class_active: "bg-gray-300", class: "w-full items-center btn btn-transparent" do %>
+  <div>
+    <%= inline_svg_tag "svg/user-group.svg", class: "size-5" %>
+  </div>
+  <div>
     Users
-  </span>
+  </div>
 <% end %>
-<%= active_link_to organization_inboxes_path(@organization), class_active: "bg-gray-300", class: "w-full btn btn-transparent" do %>
-  <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
-  <span>
+<%= active_link_to organization_inboxes_path(@organization), class_active: "bg-gray-300", class: "w-full items-center btn btn-transparent" do %>
+  <div>
+    <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-5" %>
+  </div>
+  <div>
     Inboxes
-  </span>
+  </div>
 <% end %>
