--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -7,8 +7,9 @@
         <%= image_tag "logo.png", alt: "logo", class: "max-h-10 max-w-10" %>
       <% end %>
 
-      <%#= active_link_to "Organizations", organizations_path, active: :exclusive, class_active: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300" %>
-
+      <%= active_link_to organizations_path, active: :exclusive, class_active: "bg-slate-400", class: "aspect-square flex justify-center items-center text-sm rounded-md border-4 border-transparent hover:border-slate-400 hover:bg-gray-600" do %>
+        <%= inline_svg_tag 'svg/list-bullet.svg', class: 'size-6' %>
+      <% end %>
       <div class="flex flex-col items-center space-y-2">
         <% current_user.organizations.each do |organization| %>
           <%= active_link_to organization_path(organization), class_active: "bg-slate-400", class: "flex items-center space-x-2 text-sm rounded-md border-4 border-transparent hover:border-slate-400 hover:bg-gray-600" do %>
