--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,6 @@
 <nav class="flex justify-between p-4 border-b bg-white">
   <div class="flex items-center gap-2">
-    <%= active_link_to "Home", root_path, active: :exclusive, class_active: "bg-gray-300", class: "btn btn-transparent" %>
-
     <% if signed_in? %>
-      <%= active_link_to "Organizations", organizations_path, active: :exclusive, class_active: "bg-gray-300", class: "btn btn-transparent" %>
       <% if current_organization %>
         <%= link_to organization_path(@organization), class: "inline-flex items-center gap-2 no-underline" do %>
           <div>
@@ -18,7 +15,7 @@
   </div>
 
   <%# auth %>
-  <div class="">
+  <div class="flex items-center gap-2">
     <% if signed_in? %>
       <%= active_link_to current_user.email, edit_user_registration_path, class_active: "bg-gray-300", class: "btn btn-transparent" %>
       <div class="inline-flex">
