bridge review prompt component

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -17,3 +17,5 @@
   <%= link_to "Edit", edit_organization_path(@organization), class: "btn btn-secondary", data: {"bridge--menu-target": "item"} if policy(@organization).edit? %>
   <%= button_to "Destroy", @organization, method: :delete, data: { turbo_confirm: "Are you sure?", "bridge--menu-target": "item" }, class: "btn btn-danger" if policy(@organization).destroy? %>
 </div>
+
+<meta data-controller="bridge--review-prompt" />
