frontend validations on forms

--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="">
     <%= form.label :name %>
-    <%= form.text_field :name, class: "form-input", autofocus: true %>
+    <%= form.text_field :name, class: "form-input", autofocus: true, required: true %>
   </div>
 
   <div class="">
