--- a/app/views/organizations/inboxes/index.html.erb
+++ b/app/views/organizations/inboxes/index.html.erb
@@ -6,7 +6,7 @@
   <% content_for :title, "Inboxes" %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Inboxes</h1>
+    <h1 class="font-bold text-lx lg:text-3xll">Inboxes</h1>
     <%= link_to "New inbox", new_organization_inbox_path(@organization), class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
