--- a/app/views/organizations/inboxes/new.html.erb
+++ b/app/views/organizations/inboxes/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">New inbox</h1>
+  <h1 class="font-bold text-lx lg:text-3xll">New inbox</h1>
 
   <%= render "form", inbox: @inbox %>
 
