--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
   </head>
 
   <body class="flex h-screen">
-    <%#= render "shared/sidebar" if signed_in? %>
-    <%= render "shared/sidebar_2_cols" if signed_in? %>
+    <%= render "shared/sidebar" if signed_in? %>
+    <%#= render "shared/sidebar_2_cols" if signed_in? %>
 
     <div class="flex-grow overflow-y-auto flex flex-col">
       <header class="sticky z-30 top-0">
@@ -18,8 +18,8 @@
       <main class="flex-grow p-2 lg:p-4">
         <%= yield %>
       </main>
-      <%= render "shared/footer" %>
       <%= render "shared/footer_nav" %>
+      <%= render "shared/footer" unless signed_in? %>
     </div>
   </body>
 </html>
