--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,7 +2,7 @@
   <%# Widescreen sidebar top %>
   <nav class="flex flex-col">
     <details class="">
-      <summary class="hover:bg-gray-300 py-2 cursor-pointer">
+      <summary class="btn-transparent font-semibold text-sm py-2 cursor-pointer">
         <% if current_organization %>
         <div class="inline-flex items-center gap-2 max-w-40">
           <div>
@@ -13,7 +13,9 @@
           </div>
         </div>
         <% else %>
-          Select Organization
+          <div class="py-1 inline-flex">
+            Select Organization
+          </div>
         <% end %>
       </summary>
       <div class="space-y-2 p-2 border-b-2 border-slate-300">
