less rounded btns by default

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -24,7 +24,7 @@
 }
 
 .btn {
-  @apply inline-flex px-4 py-2 rounded-full space-x-2 font-semibold text-sm transition-colors ease-in-out duration-300 cursor-pointer;
+  @apply inline-flex px-4 py-2 rounded space-x-2 font-semibold text-sm transition-colors ease-in-out duration-300 cursor-pointer;
 }
 
 .btn-primary {
